--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,11 @@
 body{
     text-align: center;
 }
-#statInput{
+#pitcherStats{
+    text-align: center;
+    display:none;
+}
+#batterStats{
     text-align: center;
     display:none;
 }
@@ -12,4 +16,7 @@ body{
 #ui-id-1{
     text-align: left;
     width: 50px;
+}
+.btn-group{
+    width: 500px;
 }
