--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,6 @@
 body{
     text-align: center;
+    margin: auto;
 }
 
 #output{
@@ -22,6 +23,50 @@ body{
 .active{
     padding: 10px;
 }
-.highlight{
+.highlightYellow{
     background: yellow;
+}
+.highlightOrange{
+    background: orange;
+}
+.highlightRed{
+    background: red;
+}
+#yellow{
+    background: yellow;
+
+}
+#orange{
+    background: orange;
+
+}
+#red{
+    background: red;
+
+}
+.key{
+    width: 75px;
+}
+.loader {
+    border: 8px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 8px solid yellow;
+    border-right: 8px solid orange;
+    border-bottom: 8px solid red;
+    border-left: 8px solid pink;
+    width: 40px;
+    height: 40px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+    margin: auto;
+}
+
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
